--- a/controleshtml5.html
+++ b/controleshtml5.html
@@ -13,10 +13,20 @@
             background-size: cover;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
+        .btn-main{
+            cursor: pointer;
+            box-shadow: 0 0 10px  rgba(0, 0, 0, .2);
+            background-attachment: fixed;
+            backdrop-filter: blur(20px);
+            border: 2px solid  rgba(0, 0, 0, .2);
+        }
+        .btn-main:hover{
+            background-color: rgba(162, 160, 160, 0.568);
+        }
     </style>
 </head>
 <body>
     <h1 style="text-align: center;">Controles HTML5</h1>
-    <a href="index.html" ><input class="btn-main" type="button" value="Cerrar" style="height: 30px; width: 200px; margin-left: 10%; border-radius: 40px; cursor: pointer; font-family: Verdana, Geneva, Tahoma, sans-serif; margin-top: 50px; margin-left: 44%;" ></a>
+    <a href="index.html" ><input class="btn-main" type="button" value="Cerrar" style="height: 30px; width: 200px; margin-left: 10%; border-radius: 40px;  font-family: Verdana, Geneva, Tahoma, sans-serif; margin-top: 50px; margin-left: 44%;" ></a>
 </body>
 </html>
