--- a/recuperarContraseña.html
+++ b/recuperarContraseña.html
@@ -38,6 +38,11 @@
             backdrop-filter: blur(20px);
             border: 2px solid rgba(255, 255, 255, 2);
             box-shadow: 0 0 10px  rgba(0, 0, 0, .2);
+            cursor: pointer;
+        }
+        
+        .btn-recuperacion:hover{
+            background-color: rgba(162, 160, 160, 0.568);
         }
 
         
